syntax="proto2";

message Employee
{
  enum Gender { MALE = 0; FEMALE = 1; }

  required uint64 id                    = 1;
  required string name                  = 2;
  required Gender gender                = 3;
  required uint64 date_of_birth         = 4;
  required double last_10_annual_salary = 5;
  required double last_10_annual_bonus  = 6;
  required double last_10_annual_sales  = 7;
}
