syntax="proto2";

import "common.proto";

message QueryByIdResponse
{
  required Employee employee = 1;
}
